# mkdocs-dataview-plugin

./: .pylintrc  CONTRIBUTING.md  README.md  known-issues.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: getting-started.md  index.md
docs/assets/css/: extras.css  style.css
docs/dev-guide/: ARCHITECTURE.md  features.md  index.md
docs/examples/: index.md
docs/user-guide/: index.md
src/mkdocs_dataview/: __init__.py  __main__.py  parser.py  plugin.py  solvers.py  utils.py
src/mkdocs_dataview/markdown_db/: __init__.py  file_renderer.py  index.py  md_renderer.py
src/mkdocs_dataview/query/: __init__.py  grammar.py  solvers.py
tests/: test_plugin.py
tests/query/: test_expression_select_clause.py  test_expression_solver_identifiers.py  test_expression_solver_multiple_run.py  test_expression_solver_operation_priority.py  test_select_clause_column_names.py  test_sources_interpreter.py
